[package]
name = "shadove"
version = "0.1.0"
authors = ["yukihane <yukihane.feather@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.10.0", features = ["json"]}
tokio = {version = "0.2.6"}
serde = {version = "1.0.104", features = ["derive"]}
serde_json = "1.0.44"
